kubernetes/apps/kuma/app/volsync.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kuma-volsync
  namespace: kuma
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ${SECRET_S3_VOLSYNC_HOST}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
